2001-04-26  Glynn Foster  <glynn.foster@sun.com>

	* default.in: So now we have [Classic] and [Default].
	  Classic will be gmc and Default will be Nautilus.
          Okay there's also [Nautilus] for some monkeys which 
          will be removed later.

2001-03-23  Glynn Foster <glynn.foster@sun.com>
	* logout.c: Get rid of gsm-protocol calls since they are not 
	  needed.

Wed Mar 14 12:39:26 2001  George Lebl <jirka@5z.com>

	* logout.c:  call poweroff and reboot instead of shutdown, that works
	  on old and new redhats alike

Mon Mar 12 14:44:19 2001  George Lebl <jirka@5z.com>

	* splash.c: Make it possible to make the done string translated, by
	  translating the entire line for the "done", and making it a special
	  case.

Sat Mar 10 19:13:50 2001  George Lebl <jirka@5z.com>

	* logout.c: freeing strings from under gettext is generally
	  considered bad :)

2001-03-07  Glynn Foster  <glynn.foster@sun.com>

	The following contains some gruesome hacks to not get gnome-session
        saving all the time. Actually it does carry out the save
        proccess but only writes to the session file when it should. It
        seems that this is the quickest hack to get things working 
        correctly.

	* command.c: (command): Add command for new GsmSessionSaveMode
	* gsm-protocol.c: (gsm_protocol_set_sessionsave_mode): Added 
        new function to set up the session save. 
	* gsm-protocol.h: Added function header
	* headers.h: Added extern gboolean session_save
	* logout.c: (display_gui): toggle_button was being reverse 
        engineered? [remove !]
	* main.c: Added gboolean session_save
	* manager.c: (save_yourself_request), (update_save_state),
	(new_client): So we save all the time - but do we write all
        the time?
	* save-session.c: (main): Now sets the value of session_save
        at the start of the save to TRUE and sets it back to false at
        the end of the save. This is just a klunky way of making sure 
        that the session gets saved.