@@ -160,7 +160,14 @@ main (int argc, char *argv[])
   gnome_config_push_prefix (GSM_OPTION_CONFIG_PREFIX);
   splashing = gnome_config_get_bool (SPLASH_SCREEN_KEY "=" SPLASH_SCREEN_DEFAULT);
   autosave = gnome_config_get_bool (AUTOSAVE_MODE_KEY "=" AUTOSAVE_MODE_DEFAULT);
-  
+
+ /* If the session has been set at the command line we want to update the
+    value of CurrentSession - a special fix for the gdm session chooser */
+
+ if(session_name) {
+   gnome_config_set_string (CURRENT_SESSION_KEY, session_name);
+ } 
+
   /* If the session name hasn't been specified from the command line */ 
   if(session_name == NULL) {
 	/* If there is no key specified, fall back to the default session */	
