@@ -1,3 +1,8 @@
+2001-04-30  Glynn Foster <glynn.foster@sun.com>
+	* main.c: If using the --choose-session=ARG bit, then
+	  immediately set the value of the CurrentSession. This
+	  is mainly an untested fix for gdm
+
 2001-04-26  Glynn Foster  <glynn.foster@sun.com>
 
 	* default.in: So now we have [Classic] and [Default].
